--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>3.5.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.isy</groupId>
-    <artifactId>practice1</artifactId>
+    <groupId>com.isy.sypedia</groupId>
+    <artifactId>sypedia-backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>practice1</name>
-    <description>practice1</description>
+    <name>SYPedia Backend</name>
+    <description>SYPedia 백엔드</description>
     <url/>
     <licenses>
         <license/>
